spring-boot-app-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
spec:
  selector:
    app: spring-boot-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer










# apiVersion: v1
# kind: Service
# metadata:
#   name: spring-boot-app-service
# spec:
#    selector:
#      app: spring-boot-app
#   type: NodePort
#   ports:
#     - name: http
#       port: 80
#       targetPort: 8080
#       protocol: TCP
#   selector:
#     app: spring-boot-app
